# SecurityCam

./: .gitignore  pyproject.toml
security_cam/: __init__.py
