[tool.poetry]
name = "security_cam"
version = "0.1.0"
description = ""
authors = ["Harry Caira"]

[tool.poetry.dependencies]
python = "3.10"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
security_cam = "security_cam:main"